# cosmic-power-monitor

./: .gitignore  Cargo.toml  FLATPAK_SUBMISSION.md  LICENSE  README.md  generate-flatpak-sources.sh  justfile  report.md  setup.sh
graphify-out/: .graphify_analysis.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
resources/: com.acemythos.CosmicPowerMonitor.desktop  io.github.AceMythos.CosmicPowerMonitor.metainfo.xml  io.github.AceMythos.cosmic-ext-applet-power-monitor.desktop  io.github.AceMythos.cosmic-ext-applet-power-monitor.metainfo.xml
src/: app.rs  battery.rs  main.rs
